bug: Make cards tap-able on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,12 +15,16 @@
     color: black;
     border-style: solid;
     margin: 80px 0px 50px;
+    width: 326px;
+    height: 326px;
 }
 
 #deck > * {
     border-style: solid;
     border-color: black;
-    font-size: 5em;
+    font-size: 14vw;
+    width: 80px;
+    height: 80px;
 }
 
 .covered {
